--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Movies</title>
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
 
-  Hehe xd
+  <header>
+    <div class="hero" style="background-image: url(src/images/hero_image.jpg)">
+      <nav class="main-nav">
+        <a href="/" class="logo">
+          <span class="icon"></span>
+          NiceTravel
+        </a>
+      </nav>
+
+      <div class="featured-destination container">
+        <h2>Beyond imaginable</h2>
+        <h1>Alaska</h1>
+        <h3>The northernmost and westernmost state in the United States with the most easterly longitude in the United States</h3>
+      </div>
+
+    </div>
+  </header>
+
+  <section class="featured-multiple">
+    <div class="travel-card">
+      <img src="src/images/small-preview.jpg" class="travel-img">
+      <div class="travel-card-content">
+        <h1>Macedonia</h1>
+        <p>A landlocked country, the Republic of Macedonia has borders with Kosovo[a] to the northwest, Serbia to the north, Bulgaria to the east, Greece to the south, and Albania to the west.</p>
+      </div>
+    </div>
+  </section>
+
+  <script src="bower_components/angular/angular.min.js"></script>
 
 </body>
 </html>
