Landing page lul

--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Movies</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
 
   <header>
-    <div class="hero" style="background-image: url(src/images/hero_image.jpg)">
+    <div class="hero" style="background-image: url(src/images/got-hero-img.jpg)">
       <nav class="main-nav">
         <a href="/" class="logo">
           <span class="icon"></span>
-          NiceTravel
+          SickMovies
         </a>
       </nav>
 
-      <div class="featured-destination container">
-        <h2>Beyond imaginable</h2>
-        <h1>Alaska</h1>
-        <h3>The northernmost and westernmost state in the United States with the most easterly longitude in the United States</h3>
+      <div class="featured-content container">
+        <h2>Winter is coming</h2>
+        <h1>Game of Thrones</h1>
+        <h3>Nine noble families fight for control over the mythical lands of Westeros. Meanwhile, a forgotten race, hell-bent on destruction, returns after being dormant for thousands of years.</h3>
+
+        <button class="button light watch-trailer-button ghost">
+          <i class="play-button material-icons">play_arrow</i>
+          Play trailer
+        </button>
+
       </div>
 
     </div>
   </header>
-
+<!--
   <section class="featured-multiple">
     <div class="travel-card">
       <img src="src/images/small-preview.jpg" class="travel-img">
@@ -35,7 +42,7 @@
         <p>A landlocked country, the Republic of Macedonia has borders with Kosovo[a] to the northwest, Serbia to the north, Bulgaria to the east, Greece to the south, and Albania to the west.</p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <script src="bower_components/angular/angular.min.js"></script>
 
